test/fail/empty-untyped-set-creation.app
//Type cannot be determined for empty untyped set creation
application test
 
  define page root(){
    output({}.length)
  }